wrap save details in div to prevent scrolling background image on mobile

--- a/src/styles/saves.scss
+++ b/src/styles/saves.scss
@@ -158,7 +158,6 @@
 		flex-direction: column;
 		font-size: 1.2em;
 		border-bottom: 2px solid var(--separator);
-		overflow-y: auto;
 
 		&.preview-save {
 			border-left: 2px solid var(--separator);
@@ -168,6 +167,12 @@
 			.graphics {
 				font-size: 0.6em;
 			}
+		}
+		.save-details-content {
+			display: flex;
+			flex-direction: column;
+			overflow-x: hidden;
+			overflow-y: auto;
 		}
 
 		.deta {
@@ -255,10 +260,7 @@
 			}
 			.graphics-wrapper {
 				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
+				inset: 0;
 				opacity: 0.2;
 				overflow: hidden;
 				z-index: 0;
